Refactor app key generation payloads
